syntax = "proto3";

option java_package = "com.cromxt.proto.files";
option java_multiple_files = true;




enum MediaUploadStatus {
  SUCCESS = 0;
  ERROR = 1;
}


message MediaMetaData {
  bool hlsStatus = 1;
  string contentType = 2;
  string fileName = 3;

}
message MediaUploadRequest {
  bytes file = 1;
}

message MediaUploadResponse {
  string fileId = 1;
  MediaUploadStatus status = 2;
}

service MediaHandlerService {
  rpc uploadFile (stream MediaUploadRequest) returns (MediaUploadResponse) {}
}
